@@ -128,19 +128,21 @@ class Mixer:
         Argument channel count.
         """
         if count >= self._channel_max:
-            for id in range(self._channel_max, count):
+            current = self._channel_max
+            self._channel_max = count
+            for id in range(current, count):
                 self._get_channel(id)
                 self._channel_available.insert(0, id)
-            self._channel_max = count
         elif count >= 0:
-            for id in range(count, self._channel_max):
+            current = self._channel_max
+            self._channel_max = count
+            for id in range(count, current):
                 if str(id) in self._channels.keys():
                     if self._channels[id] is not None:
                         self._channels[id].stop()
                     self._channels.pop(id)
                 if id in self._channel_available:
                     self._channel_available.remove(id)
-            self._channel_max = count
         return None
 
     def get_num_channels(self):
@@ -275,7 +277,7 @@ class Mixer:
         if id < self._channel_max:
             self._channels[id] = channel
         else:
-            raise AttributeError('Channel not available.')
+            raise IndexError('invalid channel index')
 
 
 class Sound:
